feat: implementa atualização de benefícios e melhorias na interface
- Implementada a atualização de benficios
- Refatora as telas de Gerenciamento e Transferência no Angular para serem responsivas com Bootstrap.
- Adiciona destaques visuais na Navbar para facilitar a navegação entre as funcionalidades.
- Corrige a sobreposição de botões no formulário de cadastro.

--- a/frontend/beneficio-app/src/index.html
+++ b/frontend/beneficio-app/src/index.html
@@ -6,8 +6,17 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- CSS do Bootstrap (Sempre no HEAD) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Ícones do Bootstrap (Sempre no HEAD) -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
+
+<!-- Se precisar de interatividade do Bootstrap (Modais, Dropdowns), coloque o JS aqui no final -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
